# lunar-hal

./: .env.example  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  install.sh  run_train_from_chunks.sh  stellar_siren_norm.json
.github/: PULL_REQUEST_TEMPLATE.md
ai/lnai/: Cargo.toml
ai/lnai-gnn/: Cargo.toml
ai/lnai-gnn/src/: dataset.rs  loss.rs  main.rs
ai/lnai-models/: Cargo.toml
ai/lnai-models/src/: gnn.rs  lib.rs  pinn.rs  siren.rs
ai/lnai-siren/: Cargo.toml
ai/lnai-siren/src/: dataset.rs  loss.rs  main.rs
ai/lnai/src/: dataset.rs  lore_gen.rs  lore_gen_main.rs  loss.rs  main.rs  model.rs
ai/lunar-ai-cli/: Cargo.toml
ai/lunar-ai-cli/src/: main.rs
crates/lunar-backend/: Cargo.toml
crates/lunar-backend/src/: ai.rs  main.rs
crates/lunar-frontend/: Cargo.toml  Dioxus.toml
crates/lunar-frontend/.cargo/: config.toml
crates/lunar-frontend/assets/: main.css  tailwind.css
crates/lunar-frontend/src/: api.rs  assets.rs  main.rs
crates/lunar-frontend/src/components/: mod.rs
crates/lunar-frontend/src/components/editor/: editor_page.rs  mod.rs  sidebar.rs
crates/lunar-frontend/src/components/layout/: header.rs  hero_section.rs  mod.rs
crates/lunar-frontend/src/components/pages/: about.rs  contact.rs  mod.rs
crates/lunar-frontend/src/components/ui/: divider.rs  glowing_button.rs  glowing_subtitle.rs  glowing_title.rs  journey_modal.rs  mod.rs
crates/lunar-site/: Cargo.toml  Dioxus.toml
crates/lunar-site/assets/: main.css  tailwind.css
crates/lunar-site/src/: main.rs
crates/lunar-start/: Cargo.toml
crates/lunar-start/src/: main.rs
crates/lunar-structures/: Cargo.toml
crates/lunar-structures/src/: lib.rs
crates/lunar-ui-shared/: Cargo.toml
crates/lunar-ui-shared/src/: lib.rs  star_shader.rs
install/: Containerfile  README.md  cloud-init.yaml  orchestrate.sh  podman-compose.rustfs.yml  podman-compose.yml  run-podman.sh
models/: stellar_gnn_norm.json  stellar_lore_cache.json  stellar_siren_norm.json
models/validation/: stellar_norm.json
testbench/lunar-structures-testbench/: Cargo.toml
testbench/lunar-structures-testbench/src/: lib.rs
testbench/lunar-testbench/: Cargo.toml  Dioxus.toml
testbench/lunar-testbench-backend/: Cargo.toml
testbench/lunar-testbench-backend/src/: main.rs  playground.html  siren_ui.html
testbench/lunar-testbench/assets/: main.css
testbench/lunar-testbench/src/: api.rs  main.rs
testbench/lunar-testbench/src/components/: mod.rs  ui.rs
testbench/lunar-testbench/src/pages/: backend_api.rs  dashboard.rs  datasets.rs  mod.rs  models.rs  pipeline.rs  siren_gallery.rs  training.rs  validation.rs
