[workspace]
members = [
    "ai/lnai", "ai/lnai-models", "ai/lnai-gnn", "ai/lunar-ai-cli", "ai/lnai-siren",
    "crates/lunar-backend", "crates/lunar-frontend", "crates/lunar-site",
    "crates/lunar-start", "crates/lunar-structures", "crates/lunar-ui-shared",
    "testbench/lunar-structures-testbench",
    "testbench/lunar-testbench", "testbench/lunar-testbench-backend",
]
resolver = "3"

[workspace.package]
version = "0.1.0"
license = "AGPL-3"
readme = "README.md"
edition = "2024"
authors = ["Nikita Goncharov <ininids@ininids.in.rs>"]
