[package]
name = "lnai-models"
version.workspace = true
license.workspace = true
readme.workspace = true
edition.workspace = true
authors.workspace = true

[features]
default = []
pinn = []
gnn = []
image = []
siren = []

[dependencies]
burn = { version = "0.21", features = ["std", "train", "cuda", "autodiff", "fusion", "autotune"] }