[package]
name = "lunar-frontend"
version = {workspace = true}
authors = {workspace = true}
edition = {workspace = true}

[dependencies]
dioxus = { version = "0.7.1", features = ["router"] }
reqwest = { version = "0.13.4", features = ["json"] }
lunar-structures = { path = "../lunar-structures" }

[features]
default = ["web"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]
