[package]
name = "lunar-frontend"
version = {workspace = true}
authors = {workspace = true}
edition = {workspace = true}

[dependencies]
dioxus = { version = "0.7.1", features = ["router"] }
reqwest = { version = "0.13.4", features = ["json"] }
lunar-structures = { path = "../lunar-structures" }
lunar-ui-shared = { path = "../lunar-ui-shared" }
image = "0.25.10"
base64 = "0.22.1"
wasm-bindgen = "0.2"
js-sys = "0.3"
web-sys = { version = "0.3", features = [
    "WebGl2RenderingContext",
    "HtmlCanvasElement",
    "Window",
    "Document",
    "Element",
] }
nah = "0.1.2"

[features]
default = ["web"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]
