[package]
name = "lunar-site"
version = "0.1.0"
authors = ["ininids <ininids@ininids.in.rs>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.7.1", features = [] }
wasm-bindgen = "0.2"
js-sys = "0.3"
gloo-timers = { version = "0.3", default-features = false }
web-sys = { version = "0.3", features = [
    "Window",
    "Document",
    "Element",
    "HtmlElement",
    "HtmlCanvasElement",
    "CanvasRenderingContext2d",
    "ImageData",
    "MouseEvent",
    "TouchEvent",
    "TouchList",
    "Touch",
    "Navigator",
    "Clipboard",
    "EventTarget",
] }
nah = "0.1.1"

[features]
default = ["web"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]