[package]
name = "lunar-ui-shared"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
dioxus = { version = "0.7.1", features = ["web"] }
wasm-bindgen = "0.2"
js-sys = "0.3"
web-sys = { version = "0.3", features = [
    "WebGl2RenderingContext",
    "WebGlShader",
    "WebGlProgram",
    "WebGlUniformLocation",
    "WebGlBuffer",
    "HtmlCanvasElement",
    "Window",
    "Document",
    "Element",
    "console",
] }
