[package]
name = "lunar-testbench-backend"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
readme.workspace = true

[[bin]]
name = "lunar-testbench-backend"
path = "src/main.rs"

[dependencies]
lunar-structures = { path = "../../crates/lunar-structures" }
lunar-structures-testbench = { path = "../lunar-structures-testbench" }
axum = "0.8.9"
tokio = { version = "1.52.3", features = ["full"] }
tokio-util = "0.7"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1"
anyhow = "1"
thiserror = "2"
parking_lot = "0.12"
uuid = { version = "1", features = ["v4", "serde"] }
tower-http = { version = "0.6.11", features = ["cors"] }
tracing = "0.1"
reqwest = { version = "0.12", features = ["json"] }
walkdir = "2"
sysinfo = "0.39"
