[package]
name = "lunar-testbench"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
readme.workspace = true

[[bin]]
name = "lunar-testbench"
path = "src/main.rs"

[features]
default = ["web"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]

[dependencies]
dioxus = { version = "0.7.1", features = ["web", "router"] }
lunar-structures = { path = "../../crates/lunar-structures" }
lunar-structures-testbench = { path = "../lunar-structures-testbench" }
lunar-ui-shared = { path = "../../crates/lunar-ui-shared" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
gloo-net = { version = "0.7.0", features = ["http"] }
gloo-timers = { version = "0.4.0", features = ["futures"] }
chrono = { version = "0.4", features = ["serde"] }
wasm-bindgen = "0.2"
js-sys = "0.3"
web-sys = { version = "0.3", features = [
    "WebGl2RenderingContext",
    "WebGlRenderingContext",
    "WebGlShader",
    "WebGlProgram",
    "WebGlUniformLocation",
    "WebGlBuffer",
    "HtmlCanvasElement",
    "Window",
    "Document",
    "Element",
    "Performance",
    "console",
] }